Actualización de diseño y footer, mejoras visuales

--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
     <title>Liceo Ambrosio Echavarria</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+<link rel="icon" type="image/x-icon" href="images/icoprepa.ico">
     <link rel="icon" type="image/x-icon" href="images/icoprepara.ico">
     <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 
@@ -19,7 +19,42 @@
     <link rel="stylesheet" href="css/icomoon.css">
     <link rel="stylesheet" href="css/style.css">
 
-    <style>
+        <style>
+     /* Barra azul a lo largo */
+      #ftco-navbar {
+        background-color: #0b0e2e !important;
+        width: 100%;
+      }
+      #ftco-navbar .container {
+        max-width: 1140px;
+      }
+
+      /* Encabezado superior */
+      .top-header {
+        background-color: white;
+        padding: 20px 0;
+      }
+      .top-header .navbar-brand {
+        font-size: 28px;
+        font-weight: bold;
+        text-transform: uppercase;
+        color: black;
+        display: flex;
+        align-items: center;
+      }
+      .top-header .navbar-brand img {
+        height: 50px;
+        margin-right: 10px;
+      }
+
+      /* Forzar color azul del logo en utilidades y botones */
+      .btn-primary, .bg-primary, .bg-darken {
+        background-color: #2257A6 !important;
+        border-color: #2257A6  !important;
+        color: #fff !important;
+      }
+
+   
       /* Barra azul a lo largo */
       #ftco-navbar {
         background-color: #0b0e2e !important;
@@ -104,7 +139,7 @@
     <div class="top-header">
       <div class="container d-flex justify-content-between align-items-center">
         <a class="navbar-brand" href="index.html">
-          <img src="images/logoprepap.ico" alt="Logo"> Ambrosio Echavarría <span style="font-size:14px; margin-left:5px;"></span>
+          <img src="images/icoprepa.ico" alt="Logo"> Liceo Ambrosio Echavarría <span style="font-size:14px; margin-left:5px;"></span>
         </a>
         <a href="#" class="btn btn-primary" style="background-color: rgb(27, 19, 109); border: none;">Aplica Aquí</a>
       </div>
